tests/error/function_used.gw
#! [contains] is already used by another value
 int i;
fun void i(){}
